// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step should render correctly 1`] = `
<div>
  <div
    id="recipe-steps"
  />
  <div
    class="sc-AykKH jcMVeo sc-fzXfLR ittBmB"
    direction="vertical"
    height="100%"
    width="100%"
  >
    <div
      class="sc-AykKH eixNXI sc-AykKI dTNugP"
      direction="vertical"
      height="100%"
      width="100%"
    >
      <div
        class="sc-AykKH dqXULp"
        direction="vertical"
        height="100%"
        width="100%"
      >
        children
      </div>
    </div>
    <div
      class="sc-AykKH jAwBcM"
      direction="vertical"
      width="100%"
    >
      <div
        class="sc-AykKH hoxMSq sc-fzXfLO fZNNwI"
        direction="horizontal"
        width="100%"
      >
        <button
          aria-controls="recipe-steps"
          class="sc-AykKC sc-fzXfLP hRrGAN"
          tabindex="-1"
        >
          back
        </button>
        <button
          aria-controls="recipe-steps"
          class="sc-AykKC jJKHJl"
          width="100%"
        >
          Ingredients
          <img
            alt=""
            class="sc-fzXfLQ jNZvTh"
            src="right_chevron_white.svg"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Step should render correctly when a background is provided 1`] = `
<div>
  <div
    id="recipe-steps"
  />
  <div
    class="sc-AykKH hrScjp sc-fzXfLR ittBmB"
    direction="vertical"
    height="100%"
    width="100%"
  >
    <div
      class="sc-AykKH eixNXI sc-AykKI dTNugP"
      direction="vertical"
      height="100%"
      width="100%"
    >
      <div
        class="sc-AykKH dqXULp"
        direction="vertical"
        height="100%"
        width="100%"
      >
        children
      </div>
    </div>
    <div
      class="sc-AykKH jAwBcM"
      direction="vertical"
      width="100%"
    >
      <div
        class="sc-AykKH hoxMSq sc-fzXfLO fZNNwI"
        direction="horizontal"
        width="100%"
      >
        <button
          aria-controls="recipe-steps"
          class="sc-AykKC sc-fzXfLP hRrGAN"
          tabindex="-1"
        >
          back
        </button>
        <button
          aria-controls="recipe-steps"
          class="sc-AykKC jJKHJl"
          width="100%"
        >
          Ingredients
          <img
            alt=""
            class="sc-fzXfLQ jNZvTh"
            src="right_chevron_white.svg"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Step should render correctly when an image is provided 1`] = `
<div>
  <div
    id="recipe-steps"
  />
  <div
    class="sc-AykKH jcMVeo sc-fzXfLR iFIAzs"
    direction="vertical"
    height="100%"
    width="100%"
  >
    <div
      class="sc-AykKH eixNXI sc-AykKI dTNugP"
      direction="vertical"
      height="100%"
      width="100%"
    >
      <div
        class="sc-AykKH dqXULp"
        direction="vertical"
        height="100%"
        width="100%"
      >
        children
      </div>
    </div>
    <div
      class="sc-AykKH jAwBcM"
      direction="vertical"
      width="100%"
    >
      <div
        class="sc-AykKH hoxMSq sc-fzXfLO fZNNwI"
        direction="horizontal"
        width="100%"
      >
        <button
          aria-controls="recipe-steps"
          class="sc-AykKC sc-fzXfLP hRrGAN"
          tabindex="-1"
        >
          back
        </button>
        <button
          aria-controls="recipe-steps"
          class="sc-AykKC jJKHJl"
          width="100%"
        >
          Ingredients
          <img
            alt=""
            class="sc-fzXfLQ jNZvTh"
            src="right_chevron_white.svg"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Step should render correctly when is dialog is true 1`] = `
<div>
  <div
    id="recipe-steps"
  />
  <div
    class="sc-AykKH jUacIA sc-fzXfLR ittBmB"
    direction="vertical"
    height="100%"
    width="100%"
  >
    <div
      class="sc-AykKH eixNXI sc-AykKI dTNugP"
      direction="vertical"
      height="100%"
      width="100%"
    >
      <div
        class="sc-AykKH dqXULp"
        direction="vertical"
        height="100%"
        width="100%"
      >
        children
      </div>
    </div>
    <div
      class="sc-AykKH jAwBcM"
      direction="vertical"
      width="100%"
    >
      <div
        class="sc-AykKH hoxMSq sc-fzXfLO fZNNwI"
        direction="horizontal"
        width="100%"
      >
        <button
          class="sc-AykKC flXWAU"
          width="100%"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
